2003-04-18  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw_amacro.c: Larry Dolittle had a problem when drawing
	  one of his files, a circle seemed to explode. I couldn't 
	  reproduce it, but after his tests I added this patch. Thanks Larry!

2003-04-07  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: RS274D caused segfaults again. Reported by Skurk.

2003-03-24  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw.[hc], src/draw_amacro.c, draw_gdk.c: Rectangular
	  apertures should have projecting line ends. set_linestyle
	  now takes one more argument. See for instance example/dan/top.gbx

-- Release 0.13 --

2003-03-16  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw.c, src/gerb_image.h, src/gerber.c: Angles are now
	  calculated as doubles instead of ints. For instance, the cslk
	  example now draws properly at the same time as Dans ridicously
	  small arcs also works.

	* src/gerber.c: Better sanity checks for angles of arcs, so
	  cw are drawn cw and ccw are drawn ccw. Closes bug #703265
	  which was reported by Mark Whitis. Thanks!

2003-03-10  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: Doesn't warn anymore if a gerber file requests an
	 image rotate on zero degrees. Reported by Balaji V.

2003-03-09  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerb_image.h,src/gerber.c: angles are floats.

2003-03-02  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw_amacro.c: Aperture macro primitive 1 is a filled circle.
	* Makefile.am, configure.in, src/gerbv.c, src/Makefile.am, 
	  src/gerbv.1.in: Removed all traces of Guile. batch.c is left, but 
	  is not compiled in.

2003-03-01  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerb_image.[hc], gerber.c: Redesigned step-and-repeat
	  parser. And when I was at it I also cleaned up new_gerb_image()
	  a bit.

2003-03-03  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw_gdk.c: one-pixel overshoot bug fixed by Holger.

2003-02-28  Stefan Petersen  <spe@stacken.kth.se>
