@@ -22,13 +22,11 @@
  */
 
 
-#include "amacro.h"
-#ifdef HAVE_MALLOC_H
-#include <malloc.h>
-#endif
 #include <stdlib.h>
 #include <string.h>
 #include <ctype.h>
+
+#include "amacro.h"
 
 /*
  * Allocates a new instruction structure
